--- a/templates/base/components/banner.html
+++ b/templates/base/components/banner.html
@@ -13,7 +13,7 @@
 							    <li class="breadcrumb-item"><a href="{% url 'index' %}">Anasayfa</a></li>
 								<li class="breadcrumb-item active" aria-current="page">{{ banner_page_name }}</li>
 								{% if attorney_name %}
-								a<li class="breadcrumb-item">{{ attorney_name }}</li>
+								<li class="breadcrumb-item">{{ attorney_name }}</li>
 								{% endif %}
 								{% if practice_area_name %}
 								<li class="breadcrumb-item">{{ practice_area_name }}</li>
