--- a/templates/base/components/nav.html
+++ b/templates/base/components/nav.html
@@ -1,6 +1,5 @@
 <!-- HEADER -->
 <div class="header header-1">
-
     <!-- TOPBAR -->
     <div class="topbar d-none d-md-block">
         <div class="container">
@@ -8,7 +7,7 @@
                 <div class="col-sm-8 col-md-6">
                     <div class="info">
                         <div class="info-item">
-                            <i class="fa fa-phone"></i><a href="tel:+90{{ firm.phone }}">0{{ firm.phone }}</a> 
+                            <i class="fa fa-phone"></i><a href="tel:+90{{ firm.phone }}">0{{ firm.phone }}</a>
                         </div>
                         <div class="info-item">
                             <i class="fa fa-envelope-o"></i> <a href="mailto:{{ firm.email }}"
@@ -16,21 +15,9 @@
                         </div>
                     </div>
                 </div>
-                <!--                
-                <div class="col-sm-4 col-md-6">
-                    <div class="sosmed-icon pull-right d-inline-flex">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-instagram"></i></a>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                    </div>
-                </div>
-                -->
-
             </div>
         </div>
     </div>
-
     <!-- NAVBAR SECTION -->
     <div class="navbar-main">
         <div class="container">
@@ -52,46 +39,19 @@
                         </li>
                         <li class="nav-item {% if banner_page_name == 'Avukatlarımız' %} active {% endif %}">
                             <a class="nav-link " href="{% url 'attorneys' %}">EKİBİMİZ</a>
-                            <!--
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="attorneys.html">ATTORNEYS LIST</a>
-                                <a class="dropdown-item" href="attorneys-single.html">SINGLE ATTORNEYS</a>
-                            </div>
-                            -->
-
                         </li>
                         <li class="nav-item {% if banner_page_name == 'Blog Yazılarımız' %} active {% endif %} ">
                             <a class="nav-link " href="{% url 'blogs' %}">BLOG</a>
-
                         </li>
                         <li class="nav-item {% if banner_page_name == 'Çalışma Alanlarımız' %} active {% endif %} ">
-                            <a class="nav-link " href="{% url 'practice_areas' %}">ÇALIŞMA ALANLARIMIZ</a>
-
+                            <a class="nav-link text-center" href="{% url 'practice_areas' %}">ÇALIŞMA ALANLARIMIZ</a>
                         </li>
-                        <!--
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">
-                                PAGES
-                            </a>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="page-gallery.html">GALLERY</a>
-                                <a class="dropdown-item" href="page-testimonials.html">TESTIMONIALS</a>
-                                <a class="dropdown-item" href="page-faq.html">FAQ</a>
-                                <a class="dropdown-item" href="page-404.html">404 PAGE</a>
-                                <a class="dropdown-item" href="page-news.html">NEWS</a>
-                                <a class="dropdown-item" href="page-news-single.html">SINGLE NEWS</a>
-                            </div>
-                        </li>
-                        -->
                         <li class="nav-item {% if banner_page_name == 'İletişim' %} active {% endif %}">
                             <a class="nav-link" href="{% url 'contact' %}">İLETİŞİM</a>
                         </li>
                     </ul>
                 </div>
-            </nav> <!-- -->
-
+            </nav> 
         </div>
     </div>
-
 </div>
