--- a/templates/page/practice_areas.html
+++ b/templates/page/practice_areas.html
@@ -3,24 +3,16 @@
 {% block content %}
 <!-- LOAD PAGE -->
 
-{% include "base/components/nav.html" %}
 {% include "base/components/banner.html" %}
 
-
-
-
-<!-- HOW TO HELP US -->
 <div class="section">
     <div class="content-wrap">
         <div class="container">				
-            
             <div class="row">
-                <!-- Item 1 -->
                 {% for practice_area in practice_areas %}
-                  
                 <div class="col-12 col-sm-6 col-md-4 mb-4">
                     <div class="box-icon-1 text-center">
-                        <a href="{% url 'single_practice_area' practice_area.slug %}">
+                        <a href="{% url 'practice_area_details' practice_area.slug %}">
                             <div class="icon">
                                 <i class="fa fa-fire"></i>
                             </div>
@@ -32,26 +24,9 @@
                     </div>
                 </div>
                 {% endfor %}
-
-                
             </div>
         </div>
     </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 {% endblock content %}
