--- a/templates/page/attorneys.html
+++ b/templates/page/attorneys.html
@@ -1,74 +1,31 @@
 {% extends "base/base.html" %}
 
 {% block content %}
-<!-- LOAD PAGE -->
 
-{% include "base/components/nav.html" %}
+<!-- LOAD PAGE -->
 {% include "base/components/banner.html" %}
 
-
-
-<!-- HOW TO HELP US -->
 <div class="section">
     <div class="content-wrap">
         <div class="container">
             <div class="row">
-                <!-- Item 1 -->
                 {% for attorney in attorneys %}
-                  
-                
                 <div class="col-sm-6 col-md-6 col-lg-3 mb-4">
                     <div class="rs-team-1">
-                        <div class="media-box">
-                            <img src="{{ attorney.cover_image.url }}" alt="" class="img-fluid">
-                        </div>
-                        <div class="body">
-                            <div class="title">{{ attorney.name }}</div>
-                            <div class="position">{{ attorney.position }}</div>
-                            <a href="tel:+90{{ attorney.phone }}"><p class="mb-0">0{{ attorney.phone }}</p></a>
-                            <a href="mailto:{{ attorney.email }}"><p> {{ attorney.email }}</p></a>
-                            <!-- <div class="sosmed-icon icon-bg-secondary d-inline-flex">
-                                <a href="https://www.facebook.com/{{ attorney.facebook }}/"><i class="fa fa-facebook"></i></a> 
-                                <a href="https://www.twitter.com/{{ attorney.twitter }}/"><i class="fa fa-twitter"></i></a> 
-                                <a href="https://www.instagram.com/{{ attorney.instagram }}/"><i class="fa fa-instagram"></i></a> 
-                                <a href="https://www.linkedin.com/{{ attorney.linkedin }}/"><i class="fa fa-linkedin"></i></a> 
-                            </div> -->
-                        </div>
+                        <a href="{% url 'attorney_details' attorney.slug %}">
+                            <div class="media-box">
+                                <img src="{{ attorney.cover_image.url }}" alt="" class="img-fluid">
+                            </div>
+                            <div class="body">
+                                <div class="title">{{ attorney.name }}</div>
+                                <div class="position">{{ attorney.position }}</div>
+                            </div>
+                        </a>
                     </div>
                 </div>
-
                 {% endfor %}
-               
             </div>
         </div>
     </div>
 </div>
-
-<!-- CTA -->
-<!-- <div class="section bg-primary">
-    <div class="content-wrap py-3">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-md-12">
-                    <div class="text-center text-white">
-                        <h3>Ücretsiz Danışma Hattı : (0533) 785 22 36</h3>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div> -->
-
-
-
-
-
-
-
-
-
-
-
-
-
 {% endblock content %}
